--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@200;300;400;500&family=Raleway:wght@400;500;600&family=Roboto:wght@400;500&family=Wix+Madefor+Text:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>React table</title>
   </head>
   <body>
     <div id="root"></div>
